@@ -26,17 +26,18 @@ import java.util.HashMap;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.function.BiConsumer;
-import java.util.stream.Collectors;
 import org.opencv.core.Size;
 import org.photonvision.common.configuration.CameraConfiguration;
 import org.photonvision.common.configuration.ConfigManager;
-import org.photonvision.common.configuration.PhotonConfiguration;
 import org.photonvision.common.dataflow.CVPipelineResultConsumer;
 import org.photonvision.common.dataflow.DataChangeService;
+import org.photonvision.common.dataflow.DataChangeService.SubscriberHandle;
 import org.photonvision.common.dataflow.events.OutgoingUIEvent;
 import org.photonvision.common.dataflow.networktables.NTDataPublisher;
 import org.photonvision.common.dataflow.statusLEDs.StatusLEDConsumer;
+import org.photonvision.common.dataflow.websocket.UICameraConfiguration;
 import org.photonvision.common.dataflow.websocket.UIDataPublisher;
+import org.photonvision.common.dataflow.websocket.UIPhotonConfiguration;
 import org.photonvision.common.hardware.HardwareManager;
 import org.photonvision.common.logging.LogGroup;
 import org.photonvision.common.logging.Logger;
@@ -44,9 +45,8 @@ import org.photonvision.common.util.SerializationUtils;
 import org.photonvision.vision.calibration.CameraCalibrationCoefficients;
 import org.photonvision.vision.camera.CameraQuirk;
 import org.photonvision.vision.camera.CameraType;
-import org.photonvision.vision.camera.LibcameraGpuSource;
 import org.photonvision.vision.camera.QuirkyCamera;
-import org.photonvision.vision.camera.USBCameraSource;
+import org.photonvision.vision.camera.csi.LibcameraGpuSource;
 import org.photonvision.vision.frame.Frame;
 import org.photonvision.vision.frame.consumer.FileSaveFrameConsumer;
 import org.photonvision.vision.frame.consumer.MJPGFrameConsumer;
@@ -70,14 +70,16 @@ public class VisionModule {
     protected final VisionSource visionSource;
     private final VisionRunner visionRunner;
     private final StreamRunnable streamRunnable;
+    private final VisionModuleChangeSubscriber changeSubscriber;
+    private final SubscriberHandle changeSubscriberHandle;
     private final LinkedList<CVPipelineResultConsumer> resultConsumers = new LinkedList<>();
-    // Raw result consumers run before any drawing has been done by the OutputStreamPipeline
+    // Raw result consumers run before any drawing has been done by the
+    // OutputStreamPipeline
     private final LinkedList<BiConsumer<Frame, List<TrackedTarget>>> streamResultConsumers =
             new LinkedList<>();
     private final NTDataPublisher ntConsumer;
     private final UIDataPublisher uiDataConsumer;
     private final StatusLEDConsumer statusLEDsConsumer;
-    protected final int moduleIndex;
     protected final QuirkyCamera cameraQuirks;
 
     protected TrackedTarget lastPipelineResultBestTarget;
@@ -91,31 +93,27 @@ public class VisionModule {
     MJPGFrameConsumer inputVideoStreamer;
     MJPGFrameConsumer outputVideoStreamer;
 
-    public VisionModule(PipelineManager pipelineManager, VisionSource visionSource, int index) {
+    public VisionModule(PipelineManager pipelineManager, VisionSource visionSource) {
         logger =
                 new Logger(
                         VisionModule.class,
                         visionSource.getSettables().getConfiguration().nickname,
                         LogGroup.VisionModule);
 
-        // Find quirks for the current camera
-        if (visionSource instanceof USBCameraSource) {
-            cameraQuirks = ((USBCameraSource) visionSource).getCameraQuirks();
-        } else if (visionSource instanceof LibcameraGpuSource) {
-            cameraQuirks = QuirkyCamera.ZeroCopyPiCamera;
-        } else {
-            cameraQuirks = QuirkyCamera.DefaultCamera;
-        }
+        cameraQuirks = visionSource.getCameraConfiguration().cameraQuirks;
 
-        // We don't show gain if the config says it's -1. So check here to make sure it's non-negative
-        // if it _is_ supported
+        if (visionSource.getCameraConfiguration().cameraQuirks == null)
+            visionSource.getCameraConfiguration().cameraQuirks = QuirkyCamera.DefaultCamera;
+
+        // We don't show gain if the config says it's -1. So check here to make sure
+        // it's non-negative if it _is_ supported
         if (cameraQuirks.hasQuirk(CameraQuirk.Gain)) {
             pipelineManager.userPipelineSettings.forEach(
                     it -> {
                         if (it.cameraGain == -1) it.cameraGain = 75; // Sane default
                     });
         }
-        if (cameraQuirks.hasQuirk(CameraQuirk.AWBGain)) {
+        if (cameraQuirks.hasQuirk(CameraQuirk.AwbRedBlueGain)) {
             pipelineManager.userPipelineSettings.forEach(
                     it -> {
                         if (it.cameraRedGain == -1) it.cameraRedGain = 11; // Sane defaults
@@ -125,16 +123,16 @@ public class VisionModule {
 
         this.pipelineManager = pipelineManager;
         this.visionSource = visionSource;
+        changeSubscriber = new VisionModuleChangeSubscriber(this);
         this.visionRunner =
                 new VisionRunner(
                         this.visionSource.getFrameProvider(),
                         this.pipelineManager::getCurrentPipeline,
                         this::consumeResult,
-                        this.cameraQuirks);
+                        this.cameraQuirks,
+                        getChangeSubscriber());
         this.streamRunnable = new StreamRunnable(new OutputStreamPipeline());
-        this.moduleIndex = index;
-
-        DataChangeService.getInstance().addSubscriber(new VisionModuleChangeSubscriber(this));
+        changeSubscriberHandle = DataChangeService.getInstance().addSubscriber(changeSubscriber);
 
         createStreams();
 
@@ -143,12 +141,13 @@ public class VisionModule {
         ntConsumer =
                 new NTDataPublisher(
                         visionSource.getSettables().getConfiguration().nickname,
-                        pipelineManager::getCurrentPipelineIndex,
+                        pipelineManager::getRequestedIndex,
                         this::setPipeline,
                         pipelineManager::getDriverMode,
                         this::setDriverMode);
-        uiDataConsumer = new UIDataPublisher(index);
-        statusLEDsConsumer = new StatusLEDConsumer(index);
+        uiDataConsumer = new UIDataPublisher(visionSource.getSettables().getConfiguration().uniqueName);
+        statusLEDsConsumer =
+                new StatusLEDConsumer(visionSource.getSettables().getConfiguration().uniqueName);
         addResultConsumer(ntConsumer);
         addResultConsumer(uiDataConsumer);
         addResultConsumer(statusLEDsConsumer);
@@ -156,6 +155,7 @@ public class VisionModule {
                 (result) ->
                         lastPipelineResultBestTarget = result.hasTargets() ? result.targets.get(0) : null);
 
+        // Sync VisionModule state with the first pipeline index
         setPipeline(visionSource.getSettables().getConfiguration().currentPipelineIndex);
 
         // Set vendor FOV
@@ -261,7 +261,7 @@ public class VisionModule {
 
         @Override
         public void run() {
-            while (true) {
+            while (!Thread.interrupted()) {
                 final Frame m_frame;
                 final AdvancedPipelineSettings settings;
                 final List<TrackedTarget> targets;
@@ -295,7 +295,8 @@ public class VisionModule {
                     try {
                         Thread.sleep(1);
                     } catch (InterruptedException e) {
-                        e.printStackTrace();
+                        logger.warn("StreamRunnable was interrupted - exiting");
+                        return;
                     }
                 }
             }
@@ -303,8 +304,31 @@ public class VisionModule {
     }
 
     public void start() {
+        visionSource.cameraConfiguration.deactivated = false;
         visionRunner.startProcess();
         streamRunnable.start();
+    }
+
+    public void stop() {
+        visionSource.cameraConfiguration.deactivated = true;
+        visionRunner.stopProcess();
+
+        try {
+            streamRunnable.interrupt();
+            streamRunnable.join();
+        } catch (InterruptedException e) {
+            logger.error("Exception killing process thread", e);
+        }
+
+        visionSource.release();
+
+        inputVideoStreamer.close();
+        outputVideoStreamer.close();
+        inputFrameSaver.close();
+        outputFrameSaver.close();
+
+        changeSubscriberHandle.stop();
+        setVisionLEDs(false);
     }
 
     public void setFov(double fov) {
@@ -323,9 +347,13 @@ public class VisionModule {
         return visionSource.isVendorCamera();
     }
 
+    public VisionModuleChangeSubscriber getChangeSubscriber() {
+        return changeSubscriber;
+    }
+
     void changePipelineType(int newType) {
         pipelineManager.changePipelineType(newType);
-        setPipeline(pipelineManager.getCurrentPipelineIndex());
+        setPipeline(pipelineManager.getRequestedIndex());
         saveAndBroadcastAll();
     }
 
@@ -333,9 +361,7 @@ public class VisionModule {
         pipelineManager.setDriverMode(isDriverMode);
         setVisionLEDs(!isDriverMode);
         setPipeline(
-                isDriverMode
-                        ? PipelineManager.DRIVERMODE_INDEX
-                        : pipelineManager.getCurrentPipelineIndex());
+                isDriverMode ? PipelineManager.DRIVERMODE_INDEX : pipelineManager.getRequestedIndex());
         saveAndBroadcastAll();
     }
 
@@ -353,17 +379,19 @@ public class VisionModule {
                         + " and settings "
                         + data);
         settings.gridSize = Units.inchesToMeters(data.squareSizeIn);
+        settings.markerSize = Units.inchesToMeters(data.markerSizeIn);
         settings.boardHeight = data.patternHeight;
         settings.boardWidth = data.patternWidth;
         settings.boardType = data.boardType;
-        settings.useMrCal = data.useMrCal;
         settings.resolution = resolution;
+        settings.useOldPattern = data.useOldPattern;
+        settings.tagFamily = data.tagFamily;
 
         // Disable gain if not applicable
         if (!cameraQuirks.hasQuirk(CameraQuirk.Gain)) {
             settings.cameraGain = -1;
         }
-        if (!cameraQuirks.hasQuirk(CameraQuirk.AWBGain)) {
+        if (!cameraQuirks.hasQuirk(CameraQuirk.AwbRedBlueGain)) {
             settings.cameraRedGain = -1;
             settings.cameraBlueGain = -1;
         }
@@ -386,10 +414,15 @@ public class VisionModule {
     }
 
     public CameraCalibrationCoefficients endCalibration() {
-        var ret = pipelineManager.calibration3dPipeline.tryCalibration();
+        var ret =
+                pipelineManager.calibration3dPipeline.tryCalibration(
+                        ConfigManager.getInstance()
+                                .getCalibrationImageSavePathWithRes(
+                                        pipelineManager.calibration3dPipeline.getSettings().resolution,
+                                        visionSource.getCameraConfiguration().uniqueName));
         pipelineManager.setCalibrationMode(false);
 
-        setPipeline(pipelineManager.getCurrentPipelineIndex());
+        setPipeline(pipelineManager.getRequestedIndex());
 
         if (ret != null) {
             logger.debug("Saving calibration...");
@@ -405,6 +438,9 @@ public class VisionModule {
         logger.info("Setting pipeline to " + index);
         logger.info("Pipeline name: " + pipelineManager.getPipelineNickname(index));
         pipelineManager.setIndex(index);
+
+        VisionSourceSettables settables = visionSource.getSettables();
+
         var pipelineSettings = pipelineManager.getPipelineSettings(index);
 
         if (pipelineSettings == null) {
@@ -412,55 +448,62 @@ public class VisionModule {
             return false;
         }
 
-        visionSource.getSettables().setVideoModeInternal(pipelineSettings.cameraVideoModeIndex);
-        visionSource.getSettables().setBrightness(pipelineSettings.cameraBrightness);
-        visionSource.getSettables().setGain(pipelineSettings.cameraGain);
+        visionRunner.runSynchronously(
+                () -> {
+                    settables.setVideoModeInternal(pipelineSettings.cameraVideoModeIndex);
+                    settables.setBrightness(pipelineSettings.cameraBrightness);
 
-        // If manual exposure, force exposure slider to be valid
-        if (!pipelineSettings.cameraAutoExposure) {
-            if (pipelineSettings.cameraExposure < 0)
-                pipelineSettings.cameraExposure = 10; // reasonable default
-        }
+                    // If manual exposure, force exposure slider to be valid
+                    if (!pipelineSettings.cameraAutoExposure) {
+                        if (pipelineSettings.cameraExposureRaw < 0)
+                            pipelineSettings.cameraExposureRaw = 10; // reasonable default
+                    }
 
-        visionSource.getSettables().setExposure(pipelineSettings.cameraExposure);
-        try {
-            visionSource.getSettables().setAutoExposure(pipelineSettings.cameraAutoExposure);
-        } catch (VideoException e) {
-            logger.error("Unable to set camera auto exposure!");
-            logger.error(e.toString());
-        }
-        if (cameraQuirks.hasQuirk(CameraQuirk.Gain)) {
-            // If the gain is disabled for some reason, re-enable it
-            if (pipelineSettings.cameraGain == -1) pipelineSettings.cameraGain = 75;
-            visionSource.getSettables().setGain(Math.max(0, pipelineSettings.cameraGain));
-        } else {
-            pipelineSettings.cameraGain = -1;
-        }
+                    settables.setExposureRaw(pipelineSettings.cameraExposureRaw);
+                    try {
+                        settables.setAutoExposure(pipelineSettings.cameraAutoExposure);
+                    } catch (VideoException e) {
+                        logger.error("Unable to set camera auto exposure!");
+                        logger.error(e.toString());
+                    }
+                    if (cameraQuirks.hasQuirk(CameraQuirk.Gain)) {
+                        // If the gain is disabled for some reason, re-enable it
+                        if (pipelineSettings.cameraGain == -1) pipelineSettings.cameraGain = 75;
+                        settables.setGain(Math.max(0, pipelineSettings.cameraGain));
+                    } else {
+                        pipelineSettings.cameraGain = -1;
+                    }
 
-        if (cameraQuirks.hasQuirk(CameraQuirk.AWBGain)) {
-            // If the AWB gains are disabled for some reason, re-enable it
-            if (pipelineSettings.cameraRedGain == -1) pipelineSettings.cameraRedGain = 11;
-            if (pipelineSettings.cameraBlueGain == -1) pipelineSettings.cameraBlueGain = 20;
-            visionSource.getSettables().setRedGain(Math.max(0, pipelineSettings.cameraRedGain));
-            visionSource.getSettables().setBlueGain(Math.max(0, pipelineSettings.cameraBlueGain));
-        } else {
-            pipelineSettings.cameraRedGain = -1;
-            pipelineSettings.cameraBlueGain = -1;
-        }
+                    if (cameraQuirks.hasQuirk(CameraQuirk.AwbRedBlueGain)) {
+                        // If the AWB gains are disabled for some reason, re-enable it
+                        if (pipelineSettings.cameraRedGain == -1) pipelineSettings.cameraRedGain = 11;
+                        if (pipelineSettings.cameraBlueGain == -1) pipelineSettings.cameraBlueGain = 20;
+                        settables.setRedGain(Math.max(0, pipelineSettings.cameraRedGain));
+                        settables.setBlueGain(Math.max(0, pipelineSettings.cameraBlueGain));
+                    } else {
+                        pipelineSettings.cameraRedGain = -1;
+                        pipelineSettings.cameraBlueGain = -1;
 
-        setVisionLEDs(pipelineSettings.ledMode);
+                        // All other cameras (than picams) should support AWB temp
+                        settables.setWhiteBalanceTemp(pipelineSettings.cameraWhiteBalanceTemp);
+                        settables.setAutoWhiteBalance(pipelineSettings.cameraAutoWhiteBalance);
+                    }
 
-        visionSource.getSettables().getConfiguration().currentPipelineIndex =
-                pipelineManager.getCurrentPipelineIndex();
+                    setVisionLEDs(pipelineSettings.ledMode);
+
+                    settables.getConfiguration().currentPipelineIndex = pipelineManager.getRequestedIndex();
+                });
 
         return true;
     }
 
     private boolean camShouldControlLEDs() {
-        // Heuristic - if the camera has a known FOV or is a piCam, assume it's in use for
+        // Heuristic - if the camera has a known FOV or is a piCam, assume it's in use
+        // for
         // vision processing, and should command stuff to the LED's.
-        // TODO: Make LED control a property of the camera itself and controllable in the UI.
-        return isVendorCamera() || cameraQuirks.hasQuirk(CameraQuirk.PiCam);
+        // TODO: Make LED control a property of the camera itself and controllable in
+        // the UI.
+        return isVendorCamera();
     }
 
     private void setVisionLEDs(boolean on) {
@@ -474,12 +517,13 @@ public class VisionModule {
                         getStateAsCameraConfig(), visionSource.getSettables().getConfiguration().uniqueName);
     }
 
-    void saveAndBroadcastAll() {
+    public void saveAndBroadcastAll() {
         saveModule();
         DataChangeService.getInstance()
                 .publishEvent(
                         new OutgoingUIEvent<>(
-                                "fullsettings", ConfigManager.getInstance().getConfig().toHashMap()));
+                                "fullsettings",
+                                UIPhotonConfiguration.programStateToUi(ConfigManager.getInstance().getConfig())));
     }
 
     void saveAndBroadcastSelective(WsContext originContext, String propertyName, Object value) {
@@ -489,7 +533,6 @@ public class VisionModule {
         HashMap<String, Object> map = new HashMap<>();
         HashMap<String, Object> subMap = new HashMap<>();
         subMap.put(propertyName, value);
-        map.put("cameraIndex", this.moduleIndex);
         map.put("mutatePipelineSettings", subMap);
 
         DataChangeService.getInstance()
@@ -506,22 +549,32 @@ public class VisionModule {
         saveAndBroadcastAll();
     }
 
-    public PhotonConfiguration.UICameraConfiguration toUICameraConfig() {
-        var ret = new PhotonConfiguration.UICameraConfiguration();
+    public UICameraConfiguration toUICameraConfig() {
+        var ret = new UICameraConfiguration();
 
+        var config = visionSource.getCameraConfiguration();
+        ret.matchedCameraInfo = config.matchedCameraInfo;
+        ret.cameraPath = config.getDevicePath();
         ret.fov = visionSource.getSettables().getFOV();
-        ret.isCSICamera = visionSource.getCameraConfiguration().cameraType == CameraType.ZeroCopyPicam;
+        ret.isCSICamera = config.matchedCameraInfo.type() == CameraType.ZeroCopyPicam;
         ret.nickname = visionSource.getSettables().getConfiguration().nickname;
         ret.uniqueName = visionSource.getSettables().getConfiguration().uniqueName;
         ret.currentPipelineSettings =
                 SerializationUtils.objectToHashMap(pipelineManager.getCurrentPipelineSettings());
-        ret.currentPipelineIndex = pipelineManager.getCurrentPipelineIndex();
+        ret.currentPipelineIndex = pipelineManager.getRequestedIndex();
         ret.pipelineNicknames = pipelineManager.getPipelineNicknames();
         ret.cameraQuirks = visionSource.getSettables().getConfiguration().cameraQuirks;
+        ret.minExposureRaw = visionSource.getSettables().getMinExposureRaw();
+        ret.maxExposureRaw = visionSource.getSettables().getMaxExposureRaw();
+        ret.minWhiteBalanceTemp = visionSource.getSettables().getMinWhiteBalanceTemp();
+        ret.maxWhiteBalanceTemp = visionSource.getSettables().getMaxWhiteBalanceTemp();
+
+        ret.deactivated = config.deactivated;
 
         // TODO refactor into helper method
         var temp = new HashMap<Integer, HashMap<String, Object>>();
         var videoModes = visionSource.getSettables().getAllVideoModes();
+
         for (var k : videoModes.keySet()) {
             var internalMap = new HashMap<String, Object>();
 
@@ -537,6 +590,11 @@ public class VisionModule {
 
             temp.put(k, internalMap);
         }
+
+        if (videoModes.size() == 0) {
+            logger.error("no video modes, guhhhhh");
+        }
+
         ret.videoFormatList = temp;
         ret.outputStreamPort = this.outputStreamPort;
         ret.inputStreamPort = this.inputStreamPort;
@@ -544,11 +602,13 @@ public class VisionModule {
         ret.calibrations =
                 visionSource.getSettables().getConfiguration().calibrations.stream()
                         .map(CameraCalibrationCoefficients::cloneWithoutObservations)
-                        .collect(Collectors.toList());
+                        .toList();
 
         ret.isFovConfigurable =
-                !(ConfigManager.getInstance().getConfig().getHardwareConfig().hasPresetFOV()
-                        && cameraQuirks.hasQuirk(CameraQuirk.PiCam));
+                !(ConfigManager.getInstance().getConfig().getHardwareConfig().hasPresetFOV());
+
+        ret.isConnected = visionSource.getFrameProvider().isConnected();
+        ret.hasConnected = visionSource.getFrameProvider().hasConnected();
 
         return ret;
     }
@@ -557,7 +617,7 @@ public class VisionModule {
         var config = visionSource.getSettables().getConfiguration();
         config.setPipelineSettings(pipelineManager.userPipelineSettings);
         config.driveModeSettings = pipelineManager.driverModePipeline.getSettings();
-        config.currentPipelineIndex = Math.max(pipelineManager.getCurrentPipelineIndex(), -1);
+        config.currentPipelineIndex = Math.max(pipelineManager.getRequestedIndex(), -1);
 
         return config;
     }
@@ -571,11 +631,9 @@ public class VisionModule {
 
         // Pipelines like DriverMode and Calibrate3dPipeline have null output frames
         if (result.inputAndOutputFrame != null
-                && (pipelineManager.getCurrentPipelineSettings() instanceof AdvancedPipelineSettings)) {
-            streamRunnable.updateData(
-                    result.inputAndOutputFrame,
-                    (AdvancedPipelineSettings) pipelineManager.getCurrentPipelineSettings(),
-                    result.targets);
+                && (pipelineManager.getCurrentPipelineSettings()
+                        instanceof AdvancedPipelineSettings settings)) {
+            streamRunnable.updateData(result.inputAndOutputFrame, settings, result.targets);
             // The streamRunnable manages releasing in this case
         } else {
             consumeResults(result.inputAndOutputFrame, result.targets);
@@ -599,9 +657,9 @@ public class VisionModule {
     }
 
     public void setTargetModel(TargetModel targetModel) {
-        var settings = pipelineManager.getCurrentPipeline().getSettings();
-        if (settings instanceof ReflectivePipelineSettings) {
-            ((ReflectivePipelineSettings) settings).targetModel = targetModel;
+        var pipelineSettings = pipelineManager.getCurrentPipeline().getSettings();
+        if (pipelineSettings instanceof ReflectivePipelineSettings settings) {
+            settings.targetModel = targetModel;
             saveAndBroadcastAll();
         } else {
             logger.error("Cannot set target model of non-reflective pipe! Ignoring...");
@@ -610,8 +668,8 @@ public class VisionModule {
 
     public void addCalibrationToConfig(CameraCalibrationCoefficients newCalibration) {
         if (newCalibration != null) {
-            logger.info("Got new calibration for " + newCalibration.resolution);
-            visionSource.getSettables().getConfiguration().addCalibration(newCalibration);
+            logger.info("Got new calibration for " + newCalibration.unrotatedImageSize);
+            visionSource.getSettables().addCalibration(newCalibration);
         } else {
             logger.error("Got null calibration?");
         }
@@ -626,6 +684,15 @@ public class VisionModule {
      */
     public void changeCameraQuirks(HashMap<CameraQuirk, Boolean> quirksToChange) {
         visionSource.getCameraConfiguration().cameraQuirks.updateQuirks(quirksToChange);
+        visionSource.remakeSettables();
         saveAndBroadcastAll();
+    }
+
+    public String uniqueName() {
+        return this.visionSource.cameraConfiguration.uniqueName;
+    }
+
+    public CameraConfiguration getCameraConfiguration() {
+        return this.visionSource.cameraConfiguration;
     }
 }
